--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -17,7 +17,7 @@
 
 @media screen and (max-width:760px) {
     .footer {
-        /* width: 100%; */
+        width: 100%;
         background-color: #FFD400;
         grid-template-columns: repeat(auto-fit, minmax(min-content, 310px));
         column-gap: 48px;
